--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="theme-color" content="#ea580c" />
+    <meta name="description" content="카페 원의 사이렌 오더 시스템" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>카페 원 - 사이렌 오더</title>
   </head>
   <body>
     <div id="root"></div>
